--- a/index.html
+++ b/index.html
@@ -1017,7 +1017,7 @@
 
                                 <div class="col-lg-6">
                                     <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/other/1.jpg" alt="" style="width: 130px;">
+                                        <img class="flex-shrink-0 img-fluid rounded" src="img/Other/1.jpg" alt="" style="width: 130px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                 <span style="color: white">Crispy Porkchop</span></h5>
@@ -1028,7 +1028,7 @@
 
                                 <div class="col-lg-6">
                                     <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/other/2.jpg" alt="" style="width: 130px;">
+                                        <img class="flex-shrink-0 img-fluid rounded" src="img/Other/2.jpg" alt="" style="width: 130px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                 <span style="color: white">Crackling Pork</span></h5>
@@ -1038,7 +1038,7 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/other/3.jpg" alt="" style="width: 130px;">
+                                        <img class="flex-shrink-0 img-fluid rounded" src="img/Other/3.jpg" alt="" style="width: 130px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                 <span style="color: white">Crackling Pork</span></h5>
@@ -1048,7 +1048,7 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/other/4.jpg" alt="" style="width: 130px;">
+                                        <img class="flex-shrink-0 img-fluid rounded" src="img/Other/4.jpg" alt="" style="width: 130px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                 <span style="color: white">Asian Chicken</span></h5>
@@ -1059,7 +1059,7 @@
 
                                 <div class="col-lg-6">
                                     <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/other/5.jpg" alt="" style="width: 130px;">
+                                        <img class="flex-shrink-0 img-fluid rounded" src="img/Other/5.jpg" alt="" style="width: 130px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                 <span style="color: white">Asian Chicken</span></h5>
@@ -1070,7 +1070,7 @@
 
                                 <div class="col-lg-6">
                                     <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/other/6.jpg" alt="" style="width: 130px;">
+                                        <img class="flex-shrink-0 img-fluid rounded" src="img/Other/6.jpg" alt="" style="width: 130px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                 <span style="color: white">Steamed / Fried Dumplings</span></h5>
@@ -1109,7 +1109,7 @@
                             <div class="row g-4">
                                 <div class="col-lg-6">
                                     <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/other/7.jpg" alt="" style="width: 130px;">
+                                        <img class="flex-shrink-0 img-fluid rounded" src="img/Other/7.jpg" alt="" style="width: 130px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                 <span style="color: white">Buko Pandan</span></h5>
@@ -1119,7 +1119,7 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/other/8.jpg" alt="" style="width: 130px;">
+                                        <img class="flex-shrink-0 img-fluid rounded" src="img/Other/8.jpg" alt="" style="width: 130px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                 <span style="color: white">Buko Pandan</span></h5>
@@ -1129,7 +1129,7 @@
                                 </div>
                                 <div class="col-lg-6">
                                     <div class="d-flex align-items-center">
-                                        <img class="flex-shrink-0 img-fluid rounded" src="img/other/9.jpg" alt="" style="width: 130px;">
+                                        <img class="flex-shrink-0 img-fluid rounded" src="img/Other/9.jpg" alt="" style="width: 130px;">
                                         <div class="w-100 d-flex flex-column text-start ps-4">
                                             <h5 class="d-flex justify-content-between border-bottom pb-2">
                                                 <span style="color: white">Buko Pandan</span></h5>
